--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   don't remove the quotes without the brackets of alert -->
   <script>
     function next_location_text() {
-      alert("Congrats on finishing the Green Trail!\n");
+      alert("Congrats on finishing the Green Trail! Complete all the quizzes to get additional 1000 points! \n");
     }
   </script>
 
