--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   don't remove the quotes without the brackets of alert -->
   <script>
     function description_text() {
-      alert("Imagine being sponsored by Nike for all your sports gear (that was really the privilege enjoyed by track-and-field athletes at Mount Sinai Campus)! \nThis uniform had witnessed batches of students shed sweat and tears at the old stadium – like what Mr Carsen Tay said, he wouldn’t trade those bittersweet experiences for anything else");
+      alert("Imagine being sponsored by Nike :o That was the privilege enjoyed by track-and-field athletes at Mount Sinai Campus! \nThis uniform had been with batches of students who went through blood, sweat and tears at the old stadium.");
     }
   </script>
   <!-- edit message to be shown when description button is pressed
