--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   don't remove the quotes without the brackets of alert -->
   <script>
     function description_text() {
-      alert("Imagine being sponsored by Nike :o That was the privilege enjoyed by track-and-field athletes at Mount Sinai Campus! \nThis uniform had been with batches of students who went through blood, sweat and tears at the old stadium.");
+      alert("Imagine being sponsored by Nike :o That was the privilege enjoyed by track-and-field athletes at Mount Sinai Campus!\n\nThis uniform had been with batches of students who went through blood, sweat and tears at the old stadium.");
     }
   </script>
   <!-- edit message to be shown when description button is pressed
